--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title> Tanvir Tech </title>
     <style>
         .background{
-    background: rgba(0, 0, 0, 0.7) url('../Images/background.jpeg');
+    background: rgba(0, 0, 0, 0.7) url('../background.jpeg');
     background-size: cover;
     background-blend-mode: darken;
 }
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar background h-nav-resp">
         <ul class="nav-list v-class-resp">
-            <div class="logo"><img src="Images/logo.png" alt="logo"></div>
+            <div class="logo"><img src="logo.png" alt="logo"></div>
             <li> <a href="#">Home</a> </li>
             <li> <a href="#">Services</a> </li>
             <li> <a href="#">About</a> </li>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="secondHalf">
-            <img src="Images/tech.png" alt="first picture">
+            <img src="tech.png" alt="first picture">
         </div>
     </section>
 
