--- a/login.html
+++ b/login.html
@@ -73,9 +73,9 @@ span.psw {
 
 <h2>Login Form for Tanvir Tech Learning</h2>
 
-<form action="/action_page.php" method="post">
+<form method="post">
   <div class="imgcontainer">
-    <img src="Images/avatar.webp" alt="Avatar" class="avatar">
+    <img src="avatar.webp" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
